--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
         }
         .card--btn {
             position: absolute;
-            top: 10px;
-            width: 80px;
+            bottom: 10px;
+            width: 60px;
             padding: 10px;
-            height: 80px;
+            height: 60px;
             background: #000080;
             color: #fff;
             border-radius: 100%;
@@ -132,6 +132,7 @@
             font-size: 13px;
             text-transform: capitalize;
             margin: 0;
+            line-height:1;
         }
         .card__flip-front--open {
             right: 10px;
