--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
         }
         .card--btn {
             position: absolute;
-            bottom: 10px;
+            bottom: 0px;
             width: 60px;
             padding: 10px;
             height: 60px;
             background: #000080;
             color: #fff;
-            border-radius: 100%;
+/*             border-radius: 100%; */
+            border-top-left-radius: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -135,7 +136,7 @@
             line-height:1;
         }
         .card__flip-front--open {
-            right: 10px;
+            right: 0px;
         }
         .card__flip-back1--close {
             left: 10px;
