--- a/index.html
+++ b/index.html
@@ -128,12 +128,13 @@
             border-top-left-radius: 100%;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: end;
             text-align: center;
             font-size: 13px;
             text-transform: capitalize;
             margin: 0;
             line-height:1;
+            padding-right:0;
         }
         .card__flip-front--open {
             right: 0px;
