--- a/index.html
+++ b/index.html
@@ -136,10 +136,11 @@
     line-height: 1;
     /* padding-right: 0; */
     transform: translateX(50%);
-}
-        .card__flip-front--open {
             right: 50%;
-        }
+}
+/*         .card__flip-front--open {
+            right: 50%;
+        } */
 /*         .card__flip-back1--close {
             left: 10px;
         } */
