--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         }
        .card--btn {
     position: absolute;
-    bottom: 5px;
+    bottom: 0;
     width: 50px;
     padding: 10px;
     height: 50px;
