--- a/index.html
+++ b/index.html
@@ -222,11 +222,11 @@
             <div id="pages" class="pages">
                 <div class="card__flip-front page">
                     <img src="0256AWM.jpg" alt="Front" class="card__flip-front-img">
-                    <p class="card__flip-front--open card--btn">Tap to Open</p>
+                 //   <p class="card__flip-front--open card--btn">Tap to Open</p>
                 </div>
                 <div class="card__flip-back1 page">
                     <img src="0256CWM_80824ae1-53c1-4b10-8168-81455d04a201.jpg" alt="Back" class="card__flip-back--img">
-                    <p class="card__flip-back1--close card--btn">Tap to close</p>
+                   // <p class="card__flip-back1--close card--btn">Tap to close</p>
                 </div>
                 <div class="card__flip-back2 page">
                     <img src="0256CWM_80824ae1-53c1-4b10-8168-81455d04a201.jpg" alt="Back" class="card__flip-back--img">
